[gd_scene load_steps=37 format=2]

[ext_resource path="res://SPRITES/tilemap_1-1.png.png" type="Texture" id=1]
[ext_resource path="res://SCENES/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://SPRITES/cube_npc_1.png" type="Texture" id=3]
[ext_resource path="res://SCRIPTS/map.gd" type="Script" id=4]
[ext_resource path="res://SCRIPTS/npc_4.gd" type="Script" id=5]
[ext_resource path="res://SCENES/npc_1_talk.tscn" type="PackedScene" id=6]
[ext_resource path="res://SCENES/npc_4_talk.tscn" type="PackedScene" id=7]
[ext_resource path="res://SCENES/npc_3_talk.tscn" type="PackedScene" id=8]
[ext_resource path="res://SCENES/npc_2_talk.tscn" type="PackedScene" id=9]
[ext_resource path="res://SPRITES/icon_e.png" type="Texture" id=10]
[ext_resource path="res://SPRITES/empty.png" type="Texture" id=11]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=13]
0/name = "tilemap_1-1.png.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 256, 256 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 38, 40 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 24, 40 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 40, 40 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 33.6254, 32.5178 )

[sub_resource type="GDScript" id=19]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 37.7525, 48 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 188.975, 136.076 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 33.3023, 64.3054 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 32, 96 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 40, 40 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[node name="map" type="Node2D"]
script = ExtResource( 4 )

[node name="tilemap_map" type="TileMap" parent="."]
tile_set = SubResource( 13 )
format = 1
tile_data = PoolIntArray( -1, 0, 65537, -65536, 0, 65537, -65535, 0, 65537, -65534, 0, 65537, -65533, 0, 65537, -65532, 0, 65537, -65531, 0, 65537, -65530, 0, 65537, -65529, 0, 65537, -65528, 0, 65537, -65527, 0, 65537, -65526, 0, 65537, -65525, 0, 65537, -65524, 0, 65537, -65523, 0, 65537, -65522, 0, 65537, -65521, 0, 65537, -65520, 0, 65537, -65519, 0, 65537, -65518, 0, 65537, -65517, 0, 65537, -65516, 0, 65537, -65515, 0, 65537, -65514, 0, 65537, -65513, 0, 65537, -65512, 0, 65537, -65511, 0, 65537, -65510, 0, 65537, -65509, 0, 65537, -65508, 0, 65537, -65507, 0, 65537, -65506, 0, 65537, 65535, 0, 65537, 0, 0, 65536, 1, 0, 65536, 2, 0, 65536, 3, 0, 65539, 4, 0, 65539, 5, 0, 65536, 6, 0, 65536, 7, 0, 65539, 8, 0, 65539, 9, 0, 65536, 10, 0, 65536, 11, 0, 65536, 12, 0, 65536, 13, 0, 65539, 14, 0, 65539, 15, 0, 65536, 16, 0, 65536, 17, 0, 65539, 18, 0, 65539, 19, 0, 65536, 20, 0, 131074, 21, 0, 65536, 22, 0, 65536, 23, 0, 65536, 24, 0, 65536, 25, 0, 65537, 26, 0, 65537, 27, 0, 65537, 28, 0, 65537, 29, 0, 65537, 30, 0, 65537, 131071, 0, 65537, 65536, 0, 65536, 65537, 0, 65536, 65538, 0, 65536, 65539, 0, 65536, 65540, 0, 65536, 65541, 0, 65536, 65542, 0, 65536, 65543, 0, 65536, 65544, 0, 65536, 65545, 0, 65536, 65546, 0, 65536, 65547, 0, 65536, 65548, 0, 65536, 65549, 0, 65536, 65550, 0, 65536, 65551, 0, 65536, 65552, 0, 65536, 65553, 0, 65536, 65554, 0, 65536, 65555, 0, 65536, 65556, 0, 65536, 65557, 0, 65536, 65558, 0, 65536, 65559, 0, 196608, 65560, 0, 196608, 65561, 0, 65538, 65562, 0, 65537, 65563, 0, 65537, 65564, 0, 65537, 65565, 0, 65537, 65566, 0, 65537, 196607, 0, 65537, 131072, 0, 65536, 131073, 0, 65536, 131074, 0, 65536, 131075, 0, 65536, 131076, 0, 65536, 131077, 0, 65536, 131078, 0, 65536, 131079, 0, 65536, 131080, 0, 65536, 131081, 0, 65536, 131082, 0, 65536, 131083, 0, 65536, 131084, 0, 65536, 131085, 0, 65536, 131086, 0, 65536, 131087, 0, 65536, 131088, 0, 65536, 131089, 0, 65536, 131090, 0, 65536, 131091, 0, 65536, 131092, 0, 65536, 131093, 0, 65536, 131094, 0, 65536, 131095, 0, 196608, 131096, 0, 196608, 131097, 0, 65538, 131098, 0, 65537, 131099, 0, 65537, 131100, 0, 65537, 131101, 0, 65537, 131102, 0, 65537, 262143, 0, 65537, 196608, 0, 65536, 196609, 0, 65536, 196610, 0, 65536, 196611, 0, 65536, 196612, 0, 65536, 196613, 0, 65536, 196614, 0, 65536, 196615, 0, 65536, 196616, 0, 65536, 196617, 0, 65536, 196618, 0, 65536, 196619, 0, 65536, 196620, 0, 65536, 196621, 0, 65536, 196622, 0, 65536, 196623, 0, 65536, 196624, 0, 65536, 196625, 0, 65536, 196626, 0, 65536, 196627, 0, 65536, 196628, 0, 65536, 196629, 0, 65536, 196630, 0, 65536, 196631, 0, 196608, 196632, 0, 196608, 196633, 0, 65538, 196634, 0, 65537, 196635, 0, 65537, 196636, 0, 65537, 196637, 0, 65537, 196638, 0, 65537, 327679, 0, 65537, 262144, 0, 65536, 262145, 0, 65536, 262146, 0, 65536, 262147, 0, 65539, 262148, 0, 65539, 262149, 0, 65536, 262150, 0, 65536, 262151, 0, 65539, 262152, 0, 65539, 262153, 0, 65536, 262154, 0, 65536, 262155, 0, 65536, 262156, 0, 65536, 262157, 0, 65539, 262158, 0, 65539, 262159, 0, 65536, 262160, 0, 65536, 262161, 0, 65539, 262162, 0, 65539, 262163, 0, 65536, 262164, 0, 131074, 262165, 0, 65536, 262166, 0, 65536, 262167, 0, 65536, 262168, 0, 65536, 262169, 0, 65537, 262170, 0, 65537, 262171, 0, 65537, 262172, 0, 65537, 262173, 0, 65537, 262174, 0, 65537, 393215, 0, 65537, 327680, 0, 196609, 327681, 0, 196609, 327682, 0, 196609, 327683, 0, 196609, 327684, 0, 196609, 327685, 0, 196609, 327686, 0, 196609, 327687, 0, 196609, 327688, 0, 196609, 327689, 0, 196609, 327690, 0, 65536, 327691, 0, 65536, 327692, 0, 196609, 327693, 0, 196609, 327694, 0, 196609, 327695, 0, 196609, 327696, 0, 196609, 327697, 0, 196609, 327698, 0, 196609, 327699, 0, 196609, 327700, 0, 196609, 327701, 0, 196609, 327702, 0, 196609, 327703, 0, 196609, 327704, 0, 196609, 327705, 0, 65537, 327706, 0, 65537, 327707, 0, 65537, 327708, 0, 65537, 327709, 0, 65537, 327710, 0, 65537, 458751, 0, 65537, 393216, 0, 65536, 393217, 0, 65536, 393218, 0, 65536, 393219, 0, 65536, 393220, 0, 65536, 393221, 0, 65536, 393222, 0, 65536, 393223, 0, 65536, 393224, 0, 65536, 393225, 0, 65536, 393226, 0, 65536, 393227, 0, 65536, 393228, 0, 65536, 393229, 0, 65536, 393230, 0, 65536, 393231, 0, 65536, 393232, 0, 65536, 393233, 0, 65536, 393234, 0, 65536, 393235, 0, 65536, 393236, 0, 65536, 393237, 0, 65536, 393238, 0, 65536, 393239, 0, 65536, 393240, 0, 2, 393241, 0, 65537, 393242, 0, 65537, 393243, 0, 65537, 393244, 0, 65537, 393245, 0, 65537, 393246, 0, 65537, 524287, 0, 65537, 458752, 0, 65536, 458753, 0, 196610, 458754, 0, 196610, 458755, 0, 196610, 458756, 0, 196610, 458757, 0, 65536, 458758, 0, 65536, 458759, 0, 65536, 458760, 0, 65536, 458761, 0, 65536, 458762, 0, 65536, 458763, 0, 65536, 458764, 0, 196610, 458765, 0, 196610, 458766, 0, 196610, 458767, 0, 196610, 458768, 0, 65536, 458769, 0, 196610, 458770, 0, 196610, 458771, 0, 196610, 458772, 0, 196610, 458773, 0, 65536, 458774, 0, 65536, 458775, 0, 65536, 458776, 0, 65536, 458777, 0, 65537, 458778, 0, 65537, 458779, 0, 65537, 458780, 0, 65537, 458781, 0, 65537, 458782, 0, 65537, 589823, 0, 65537, 524288, 0, 65536, 524289, 0, 196610, 524290, 0, 131073, 524291, 0, 196611, 524292, 0, 196610, 524293, 0, 3, 524294, 0, 65536, 524295, 0, 65536, 524296, 0, 65536, 524297, 0, 65536, 524298, 0, 65536, 524299, 0, 3, 524300, 0, 196610, 524301, 0, 131073, 524302, 0, 196611, 524303, 0, 196610, 524304, 0, 65536, 524305, 0, 196610, 524306, 0, 131073, 524307, 0, 196611, 524308, 0, 196610, 524309, 0, 65536, 524310, 0, 65536, 524311, 0, 65536, 524312, 0, 2, 524313, 0, 65537, 524314, 0, 65537, 524315, 0, 65537, 524316, 0, 65537, 524317, 0, 65537, 524318, 0, 65537, 655359, 0, 65537, 589824, 0, 65536, 589825, 0, 196610, 589826, 0, 65536, 589827, 0, 65536, 589828, 0, 196610, 589829, 0, 65536, 589830, 0, 65536, 589831, 0, 65536, 589832, 0, 65536, 589833, 0, 65536, 589834, 0, 65536, 589835, 0, 65536, 589836, 0, 196610, 589837, 0, 65536, 589838, 0, 65536, 589839, 0, 196610, 589840, 0, 65536, 589841, 0, 196610, 589842, 0, 65536, 589843, 0, 65536, 589844, 0, 196610, 589845, 0, 65536, 589846, 0, 65536, 589847, 0, 65536, 589848, 0, 65536, 589849, 0, 65537, 589850, 0, 65537, 589851, 0, 65537, 589852, 0, 65537, 589853, 0, 65537, 589854, 0, 65537, 720895, 0, 65537, 655360, 0, 65536, 655361, 0, 65536, 655362, 0, 65536, 655363, 0, 65536, 655364, 0, 65536, 655365, 0, 65536, 655366, 0, 65536, 655367, 0, 65536, 655368, 0, 65536, 655369, 0, 65536, 655370, 0, 65536, 655371, 0, 65536, 655372, 0, 65536, 655373, 0, 65536, 655374, 0, 65536, 655375, 0, 65536, 655376, 0, 65536, 655377, 0, 65536, 655378, 0, 65536, 655379, 0, 65536, 655380, 0, 65536, 655381, 0, 65536, 655382, 0, 65536, 655383, 0, 65536, 655384, 0, 2, 655385, 0, 65537, 655386, 0, 65537, 655387, 0, 65537, 655388, 0, 65537, 655389, 0, 65537, 655390, 0, 65537, 786431, 0, 65537, 720896, 0, 65536, 720897, 0, 65536, 720898, 0, 65536, 720899, 0, 65536, 720900, 0, 65536, 720901, 0, 65536, 720902, 0, 65536, 720903, 0, 65536, 720904, 0, 65536, 720905, 0, 65536, 720906, 0, 65536, 720907, 0, 65536, 720908, 0, 65536, 720909, 0, 65536, 720910, 0, 65536, 720911, 0, 65536, 720912, 0, 65536, 720913, 0, 65536, 720914, 0, 65536, 720915, 0, 65536, 720916, 0, 65536, 720917, 0, 65536, 720918, 0, 65536, 720919, 0, 65536, 720920, 0, 65536, 720921, 0, 65537, 720922, 0, 65537, 720923, 0, 65537, 720924, 0, 65537, 720925, 0, 65537, 720926, 0, 65537, 851967, 0, 65537, 786432, 0, 65536, 786433, 0, 196611, 786434, 0, 196611, 786435, 0, 196611, 786436, 0, 196611, 786437, 0, 65536, 786438, 0, 65539, 786439, 0, 65539, 786440, 0, 65536, 786441, 0, 65539, 786442, 0, 65539, 786443, 0, 65536, 786444, 0, 196611, 786445, 0, 196611, 786446, 0, 196611, 786447, 0, 196611, 786448, 0, 65536, 786449, 0, 196611, 786450, 0, 196611, 786451, 0, 196611, 786452, 0, 196611, 786453, 0, 65536, 786454, 0, 65536, 786455, 0, 65536, 786456, 0, 2, 786457, 0, 65537, 786458, 0, 65537, 786459, 0, 65537, 786460, 0, 65537, 786461, 0, 65537, 786462, 0, 65537, 917503, 0, 65537, 851968, 0, 65537, 851969, 0, 65537, 851970, 0, 65537, 851971, 0, 65537, 851972, 0, 65537, 851973, 0, 65537, 851974, 0, 65537, 851975, 0, 65537, 851976, 0, 65537, 851977, 0, 65537, 851978, 0, 65537, 851979, 0, 65537, 851980, 0, 65537, 851981, 0, 65537, 851982, 0, 65537, 851983, 0, 65537, 851984, 0, 65537, 851985, 0, 65537, 851986, 0, 65537, 851987, 0, 65537, 851988, 0, 65537, 851989, 0, 65537, 851990, 0, 65537, 851991, 0, 65537, 851992, 0, 65537, 851993, 0, 65537, 851994, 0, 65537, 851995, 0, 65537, 851996, 0, 65537, 851997, 0, 65537, 851998, 0, 65537, 983039, 0, 65537, 917504, 0, 65537, 917505, 0, 65537, 917506, 0, 65537, 917507, 0, 65537, 917508, 0, 65537, 917509, 0, 65537, 917510, 0, 65537, 917511, 0, 65537, 917512, 0, 65537, 917513, 0, 65537, 917514, 0, 65537, 917515, 0, 65537, 917516, 0, 65537, 917517, 0, 65537, 917518, 0, 65537, 917519, 0, 65537, 917520, 0, 65537, 917521, 0, 65537, 917522, 0, 65537, 917523, 0, 65537, 917524, 0, 65537, 917525, 0, 65537, 917526, 0, 65537, 917527, 0, 65537, 917528, 0, 65537, 917529, 0, 65537, 917530, 0, 65537, 917531, 0, 65537, 917532, 0, 65537, 917533, 0, 65537, 917534, 0, 65537, 1048575, 0, 65537, 983040, 0, 65537, 983041, 0, 65537, 983042, 0, 65537, 983043, 0, 65537, 983044, 0, 65537, 983045, 0, 65537, 983046, 0, 65537, 983047, 0, 65537, 983048, 0, 65537, 983049, 0, 65537, 983050, 0, 65537, 983051, 0, 65537, 983052, 0, 65537, 983053, 0, 65537, 983054, 0, 65537, 983055, 0, 65537, 983056, 0, 65537, 983057, 0, 65537, 983058, 0, 65537, 983059, 0, 65537, 983060, 0, 65537, 983061, 0, 65537, 983062, 0, 65537, 983063, 0, 65537, 983064, 0, 65537, 983065, 0, 65537, 983066, 0, 65537, 983067, 0, 65537, 983068, 0, 65537, 983069, 0, 65537, 983070, 0, 65537, 1114111, 0, 65537, 1048576, 0, 65537, 1048577, 0, 65537, 1048578, 0, 65537, 1048579, 0, 65537, 1048580, 0, 65537, 1048581, 0, 65537, 1048582, 0, 65537, 1048583, 0, 65537, 1048584, 0, 65537, 1048585, 0, 65537, 1048586, 0, 65537, 1048587, 0, 65537, 1048588, 0, 65537, 1048589, 0, 65537, 1048590, 0, 65537, 1048591, 0, 65537, 1048592, 0, 65537, 1048593, 0, 65537, 1048594, 0, 65537, 1048595, 0, 65537, 1048596, 0, 65537, 1048597, 0, 65537, 1048598, 0, 65537, 1048599, 0, 65537, 1048600, 0, 65537, 1048601, 0, 65537, 1048602, 0, 65537, 1048603, 0, 65537, 1048604, 0, 65537, 1048605, 0, 65537, 1048606, 0, 65537, 1179647, 0, 65537, 1114112, 0, 65537, 1114113, 0, 65537, 1114114, 0, 65537, 1114115, 0, 65537, 1114116, 0, 65537, 1114117, 0, 65537, 1114118, 0, 65537, 1114119, 0, 65537, 1114120, 0, 65537, 1114121, 0, 65537, 1114122, 0, 65537, 1114123, 0, 65537, 1114124, 0, 65537, 1114125, 0, 65537, 1114126, 0, 65537, 1114127, 0, 65537, 1114128, 0, 65537, 1114129, 0, 65537, 1114130, 0, 65537, 1114131, 0, 65537, 1114132, 0, 65537, 1114133, 0, 65537, 1114134, 0, 65537, 1114135, 0, 65537, 1114136, 0, 65537, 1114137, 0, 65537, 1114138, 0, 65537, 1114139, 0, 65537, 1114140, 0, 65537, 1114141, 0, 65537, 1114142, 0, 65537 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 1037.48, 163.135 )
collision_layer = 1025
collision_mask = 1025

[node name="npcs" type="Node2D" parent="."]

[node name="npc_2" type="RigidBody2D" parent="npcs"]
position = Vector2( 680, 440 )
mode = 1
sleeping = true

[node name="npc_2_sprite" type="Sprite" parent="npcs/npc_2"]
position = Vector2( -14, 104 )
texture = ExtResource( 3 )

[node name="npc_2_collision" type="CollisionShape2D" parent="npcs/npc_2"]
position = Vector2( -14, 104 )
shape = SubResource( 14 )

[node name="area_npc_2" type="Area2D" parent="npcs/npc_2"]
position = Vector2( -14, 104 )
collision_layer = 1024
collision_mask = 1024

[node name="coll_area_npc_2" type="CollisionShape2D" parent="npcs/npc_2/area_npc_2"]
shape = SubResource( 15 )

[node name="npc_1" type="RigidBody2D" parent="npcs"]
position = Vector2( 878, 504 )
mode = 1
sleeping = true

[node name="npc_1_sprite" type="Sprite" parent="npcs/npc_1"]
position = Vector2( -14, 104 )
texture = ExtResource( 3 )

[node name="npc_1_collision" type="CollisionShape2D" parent="npcs/npc_1"]
position = Vector2( -14, 104 )
shape = SubResource( 14 )

[node name="area_npc_1" type="Area2D" parent="npcs/npc_1"]
position = Vector2( -14, 104 )
collision_layer = 1024
collision_mask = 1024

[node name="coll_area_npc_1" type="CollisionShape2D" parent="npcs/npc_1/area_npc_1"]
shape = SubResource( 16 )

[node name="npc_3" type="RigidBody2D" parent="npcs"]
position = Vector2( 680, 440 )
mode = 1
sleeping = true

[node name="npc_3_sprite" type="Sprite" parent="npcs/npc_3"]
position = Vector2( -168, -176 )
texture = ExtResource( 3 )

[node name="npc_3_collision" type="CollisionShape2D" parent="npcs/npc_3"]
position = Vector2( -166.476, -176 )
shape = SubResource( 14 )

[node name="area_npc_3" type="Area2D" parent="npcs/npc_3"]
position = Vector2( -168, -176 )
collision_layer = 1024
collision_mask = 1024

[node name="coll_area_npc_3" type="CollisionShape2D" parent="npcs/npc_3/area_npc_3"]
shape = SubResource( 17 )

[node name="npc_4" type="KinematicBody2D" parent="npcs"]
position = Vector2( 544, 422.502 )
script = ExtResource( 5 )

[node name="npc_4_sprite2" type="Sprite" parent="npcs/npc_4"]
position = Vector2( 1.52429, -2.08252 )
texture = ExtResource( 3 )

[node name="npc_4_collision" type="CollisionShape2D" parent="npcs/npc_4"]
position = Vector2( 2.2475, -1.49835 )
shape = SubResource( 18 )
script = SubResource( 19 )

[node name="area_npc_4" type="Area2D" parent="npcs/npc_4"]
collision_layer = 1024
collision_mask = 1024

[node name="coll_area_npc_4" type="CollisionShape2D" parent="npcs/npc_4/area_npc_4"]
position = Vector2( 2.2475, 1.49799 )
shape = SubResource( 20 )

[node name="npc_1_talk" parent="npcs" instance=ExtResource( 6 )]

[node name="npc_4_talk" parent="npcs" instance=ExtResource( 7 )]

[node name="npc_3_talk" parent="npcs" instance=ExtResource( 8 )]

[node name="npc_2_talk" parent="npcs" instance=ExtResource( 9 )]

[node name="portals" type="Node2D" parent="."]

[node name="enter_corridor" type="Area2D" parent="portals"]

[node name="collision_corridor" type="CollisionShape2D" parent="portals/enter_corridor"]
position = Vector2( -176.202, 136.516 )
shape = SubResource( 21 )

[node name="enter_computer" type="Area2D" parent="portals"]
position = Vector2( 155.565, 533.367 )

[node name="collision_computer" type="CollisionShape2D" parent="portals/enter_computer"]
position = Vector2( 3.82243, 2.21466 )
shape = SubResource( 22 )

[node name="enter_out" type="Area2D" parent="portals"]
position = Vector2( 1588, 148 )

[node name="collision_out" type="CollisionShape2D" parent="portals/enter_out"]
position = Vector2( 44, 12 )
shape = SubResource( 23 )

[node name="enter_water" type="Area2D" parent="portals"]
position = Vector2( 384, 536 )
collision_layer = 1024
collision_mask = 1024

[node name="coll_enter_water" type="CollisionShape2D" parent="portals/enter_water"]
position = Vector2( -32, 8 )
shape = SubResource( 24 )

[node name="E_icon" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1536, 768 )
frames = SubResource( 25 )
frame = 1

[connection signal="body_entered" from="npcs/npc_2/area_npc_2" to="." method="_on_area_npc_2_body_entered"]
[connection signal="body_exited" from="npcs/npc_2/area_npc_2" to="." method="_on_area_npc_2_body_exited"]
[connection signal="body_entered" from="npcs/npc_1/area_npc_1" to="." method="_on_area_npc_1_body_entered"]
[connection signal="body_exited" from="npcs/npc_1/area_npc_1" to="." method="_on_area_npc_1_body_exited"]
[connection signal="body_entered" from="npcs/npc_3/area_npc_3" to="." method="_on_area_npc_3_body_entered"]
[connection signal="body_exited" from="npcs/npc_3/area_npc_3" to="." method="_on_area_npc_3_body_exited"]
[connection signal="body_entered" from="npcs/npc_4/area_npc_4" to="." method="_on_area_npc_4_body_entered"]
[connection signal="body_exited" from="npcs/npc_4/area_npc_4" to="." method="_on_area_npc_4_body_exited"]
[connection signal="body_entered" from="portals/enter_corridor" to="player" method="_on_enter_corridor_body_entered"]
[connection signal="body_entered" from="portals/enter_computer" to="player" method="_on_enter_computer_body_entered"]
[connection signal="body_entered" from="portals/enter_out" to="player" method="_on_enter_out_body_entered"]
[connection signal="body_entered" from="portals/enter_water" to="." method="_on_enter_water_body_entered"]
[connection signal="body_exited" from="portals/enter_water" to="." method="_on_enter_water_body_exited"]
